fixed navbar functionality on iOS phones.

--- a/css/application.css
+++ b/css/application.css
@@ -4,7 +4,7 @@ html {
 *, *::after, *::before {
   box-sizing: inherit; }
 
-.navbar a:hover, .navbar a .navbar li, #menu-li a:hover, .appointment a:hover, .services a:hover, .row3 a:hover, .submit:hover, .triangle-bio #tri-clinical:hover, .triangle-bio #tri-education:hover, .triangle-bio #tri-advocate:hover, .tile1 p:hover, .tile2 p:hover {
+.navB a:hover, .navB a .navB li, #menu-li a:hover, .appointment a:hover, .services a:hover, .row3 a:hover, .submit:hover, .triangle-bio #tri-clinical:hover, .triangle-bio #tri-education:hover, .triangle-bio #tri-advocate:hover, .tile1 p:hover, .tile2 p:hover {
   color: #16ab9f;
   text-decoration: none;
   transition: all 600ms ease-in-out; }
@@ -96,58 +96,55 @@ input {
   padding: 0; }
 
 /* css bootstrap default nav fixes*/
-.navbar-default {
+.navBDefault {
   background-color: rgba(255, 255, 255, 0.2);
   border: none; }
 
-.navbar-default .navbar-brand {
+.navBDefault .navbar-brand {
   color: #fff; }
 
-.navbar-default .navbar-brand:hover,
-.navbar-default .navbar-brand:focus {
+.navBDefault .navbar-brand:hover,
+.navBDefault .navbar-brand:focus {
   color: #16ab9f;
   /*background-color: transparent;*/ }
 
-.navbar-default .navbar-text {
+.navBDefault .navbar-text {
   color: #fff; }
 
-.navbar-default .navbar-nav > li > a {
+.navBDefault .navbNav > li > a {
   color: #fff; }
 
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
+.navBDefault .navbNav > li > a:hover,
+.navBDefault .navbNav > li > a:focus {
   color: #16ab9f;
   background-color: transparent; }
 
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+.navBDefault .navbNav > .open > a, .navBDefault .navbNav > .open > a:hover, .navBDefault .navbNav > .open > a:focus {
   color: #16ab9f;
   background-color: rgba(255, 255, 255, 0.001); }
 
 /*bespoke navbar styles*/
-.navbar, .navbar-default {
+.navB, .navBDefault {
   border-radius: 0px;
   background-color: rgba(255, 255, 255, 0.2);
-  height: 80px;
   margin-top: -2px; }
 
-.navbar-default ul {
+.navBDefault ul {
   width: 100%;
-  z-index: 900;
   margin-top: -2px;
-  margin-left: -15px;
-  position: absolute; }
+  margin-left: -15px; }
 
-.navbar li {
+.navB li {
   color: #fff;
   padding: 14px;
   font-size: 1.8em;
   -webkit-transition: all 600ms ease-in-out;
   transition: all 600ms ease-in-out;
   margin-left: 9%; }
-  .navbar li:first-child {
+  .navB li:first-child {
     padding: 0; }
 
-.navbar a {
+.navB a {
   letter-spacing: 0.4px;
   display: block;
   text-align: justify;
@@ -156,22 +153,22 @@ input {
   color: #fff;
   text-align: center;
   transition: all 600ms ease-in-out; }
-  .navbar a:hover, .navbar a .navbar li {
+  .navB a:hover, .navB a .navB li {
     -webkit-transform: scale(1.2);
     transform: scale(1.2); }
 
-.navbar-nav > li > a {
+.navbNav > li > a {
   line-height: 25px; }
 
-.navbar-nav > li > .dropdown-menu {
+.navbNav > li > .dropDownMenu {
   margin-top: 5px; }
 
-.dropdown-menu {
+.dropDownMenu {
   background-color: rgba(255, 255, 255, 0.2);
   margin-top: 3px;
   min-width: 170px; }
 
-.dropdown-menu .divider {
+.dropDownMenu .divider {
   height: 1px;
   overflow: hidden;
   background-color: #1CD6C7;
@@ -418,15 +415,11 @@ input {
 .address-text:last-of-type {
   padding-bottom: 50px; }
 
-.tile4 {
-  /* background-image: url('../img/office1.jpg');*/
-  /* background-size: cover;*/
-  /* background-position: center;*/ }
-  .tile4 img {
-    max-width: 90%;
-    max-height: auto;
-    margin-left: 5%;
-    margin-top: 1%; }
+.tile4 img {
+  max-width: 90%;
+  max-height: auto;
+  margin-left: 5%;
+  margin-top: 1%; }
 
 #facility p {
   font-size: 1em; }
@@ -580,11 +573,11 @@ input {
   .container {
     width: 90%; }
 
-  .navbar li {
+  .navB li {
     padding-left: 8px;
     margin-left: 6%; }
 
-  .navbar a {
+  .navB a {
     letter-spacing: 0.7px;
     padding-top: 20px; }
 
@@ -624,7 +617,7 @@ input {
   .container {
     width: 90%; }
 
-  .navbar li {
+  .navB li {
     font-size: 1.05em;
     margin-left: 5%; }
 
@@ -697,28 +690,24 @@ input {
   .container {
     width: 100%; }
 
-  .navbar-default ul {
+  .navBDefault ul {
     background-color: #332D2D;
     margin-top: 0;
     margin-left: 0;
     width: 100%; }
 
-  .navbar-right {
-    z-index: 900;
-    position: absolute; }
-
-  .navbar li {
+  .navB li {
     padding: 2px; }
 
   .splash-intro-text {
-    margin-top: 350px;
+    margin-top: 200px;
     font-size: 34px;
     position: relative; }
 
   .appointment {
     margin-top: 60px;
     font-size: 24px;
-    width: 295px;
+    width: 290px;
     height: 60px;
     position: relative; }
 
